Backend api updated such that a user can have a course and mark the course as played aswell as store the highscore on that course