@@ -2,19 +2,20 @@ package fritids.norskgolf.controller;
 
 import fritids.norskgolf.entities.Course;
 import fritids.norskgolf.entities.User;
+import fritids.norskgolf.entities.PlayedCourse;
 import fritids.norskgolf.repository.CourseRepository;
 import fritids.norskgolf.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-
 import org.springframework.web.server.ResponseStatusException;
+import fritids.norskgolf.repository.PlayedCourseRepository;
+import org.springframework.security.oauth2.client.authentication.OAuth2AuthenticationToken;
 
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
-import org.springframework.security.oauth2.client.authentication.OAuth2AuthenticationToken;
 
 @RestController
 @RequestMapping("/api")
@@ -26,11 +27,20 @@ public class GolfApiController {
     @Autowired
     private CourseRepository courseRepository;
 
+    @Autowired
+    private PlayedCourseRepository playedCourseRepository;
+
+
     // --- Get All Courses ---
     @GetMapping("/courses")
     public ResponseEntity<List<CourseDto>> getAllCourses() {
         List<CourseDto> courses = courseRepository.findAll().stream()
-                .map(course -> new CourseDto(course.getId(), course.getName(), course.getLatitude(), course.getLongitude(), course.getExternalId()))
+                .map(course -> new CourseDto(
+                        course.getId(),
+                        course.getName(),
+                        course.getLatitude(),
+                        course.getLongitude(),
+                        course.getExternalId()))
                 .collect(Collectors.toList());
         return ResponseEntity.ok(courses);
     }
@@ -49,60 +59,62 @@ public class GolfApiController {
     }
 
     // --- Get User's Played Courses ---
-
     @GetMapping("/users/{userId}/played-courses")
     public ResponseEntity<List<CourseDto>> getPlayedCourses(@PathVariable Long userId) {
-        User user = userRepository.findByIdWithPlayedCourses(userId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found"));
-        List<CourseDto> playedCourses = user.getPlayedCourses().stream()
-                .map(course -> new CourseDto(course.getId(), course.getName(), course.getLatitude(), course.getLongitude(), course.getExternalId()))
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(playedCourses);
+        if (!userRepository.existsById(userId)) {
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found");
+        }
+        var played = playedCourseRepository.findByUserIdWithCourse(userId).stream()
+                .map(pc -> new CourseDto(
+                        pc.getCourse().getId(),
+                        pc.getCourse().getName(),
+                        pc.getCourse().getLatitude(),
+                        pc.getCourse().getLongitude(),
+                        pc.getCourse().getExternalId()))
+                .toList();
+        return ResponseEntity.ok(played);
     }
 
     // --- Mark Course as Played ---
     @PostMapping("/users/{userId}/mark-played")
     public ResponseEntity<?> markCourseAsPlayed(
             @PathVariable Long userId,
-            @RequestBody PlayedCourseRequest playedCourseRequest,
+            @RequestBody PlayedCourseRequest body,
             OAuth2AuthenticationToken token
     ) {
-        // Get current authenticated user's providerId
+        // Auth
         String providerId = token.getPrincipal().getAttribute("sub");
-        System.out.println("Requested userId: " + userId);
-        System.out.println("Authenticated providerId: " + providerId);
-
-        Optional<User> authUserOpt = userRepository.findByProviderId(providerId);
-        if (authUserOpt.isPresent()) {
-            System.out.println("Authenticated user DB id: " + authUserOpt.get().getId());
-        } else {
-            System.out.println("Authenticated user not found in DB");
-        }
-
+        var authUserOpt = userRepository.findByProviderId(providerId);
         if (authUserOpt.isEmpty() || !authUserOpt.get().getId().equals(userId)) {
             return ResponseEntity.status(HttpStatus.FORBIDDEN).body(new ErrorResponse("Forbidden"));
         }
+        var user = userRepository.findById(userId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found"));
+        var course = courseRepository.findByExternalId(body.getCourseExternalId())
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Course not found"));
 
-        Optional<User> userOptional = userRepository.findByIdWithPlayedCourses(userId);
-        Optional<Course> courseOptional = courseRepository.findByExternalId(playedCourseRequest.getCourseExternalId());
-
-        if (userOptional.isEmpty() || courseOptional.isEmpty()) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(new ErrorResponse("User or course not found"));
+        // **DB-level idempotency check**
+        boolean exists = playedCourseRepository.existsByUserIdAndCourseId(userId, course.getId());
+        if (!exists) {
+            try {
+                playedCourseRepository.save(new fritids.norskgolf.entities.PlayedCourse(user, course));
+            } catch (org.springframework.dao.DataIntegrityViolationException e) {
+                // Race condition safety: if another request created it milliseconds earlier,
+                // treat as success (idempotent behavior).
+            }
         }
 
-        User user = userOptional.get();
-        Course course = courseOptional.get();
+        // Return updated played list
+        var played = playedCourseRepository.findByUserIdWithCourse(userId).stream()
+                .map(pc -> new CourseDto(
+                        pc.getCourse().getId(),
+                        pc.getCourse().getName(),
+                        pc.getCourse().getLatitude(),
+                        pc.getCourse().getLongitude(),
+                        pc.getCourse().getExternalId()))
+                .toList();
 
-        user.addPlayedCourse(course);
-        userRepository.save(user);
-
-        // Fetch user with playedCourses initialized
-        User updatedUser = userRepository.findByIdWithPlayedCourses(userId).orElse(user);
-        List<CourseDto> playedCourses = updatedUser.getPlayedCourses().stream()
-                .map(c -> new CourseDto(c.getId(), c.getName(), c.getLatitude(), c.getLongitude(), c.getExternalId()))
-                .collect(Collectors.toList());
-
-        return ResponseEntity.ok(playedCourses);
+        return ResponseEntity.ok(played);
     }
 
     // --- DTOs ---
